--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         /* Scroll to Top Button */
         .scroll-top {
             position: fixed;
-            bottom: 80px;
+            bottom: 100px;
             right: 20px;
             width: 56px;
             height: 56px;
@@ -932,15 +932,29 @@
                                 "Ask questions about the exam"
                             ]
                         },
-                        {
-                            "time": "12:30-13:00",
-                            "title": "🚴 Bike Home",
+                              
+                             {
+                            "time": "12:30-13:15",
+                            "title": "🛒 Shopping Time",
                             "tasks": [
+                                "Walk to Tesco",
+                                "Buy only what's on list!",
+                                "Budget £5-20",
+                                "Find Alarm Clock"
+                            ],
+                            "note": "⚠️ CRITICAL: Must buy alarm clock today!"
+                        },
+
+
+                        {
+                            "time": "13:15-13:45",
+                            "title": "🚴 Bike Home",
+                            "tasks": [                              
                                 "30-minute BIKE ride"
                             ]
                         },
                         {
-                            "time": "13:00-14:00",
+                            "time": "13:45-14:10",
                             "title": "🍝 Lunch (Leftovers)",
                             "tasks": [
                                 "Leftover Simple Pasta (150g from 1kg supply)",
@@ -949,7 +963,7 @@
                             "food": "🍽️ Pasta leftovers"
                         },
                         {
-                            "time": "14:00-16:00",
+                            "time": "14:10-16:00",
                             "title": "📝 English & Math Review",
                             "tasks": [
                                 "Light English review (1 hour)",
@@ -1538,8 +1552,8 @@
             },
             "shopping": {
                 "week_of": "2025-12-08",
-                "shop_day": "Monday Dec 8",
-                "shop_time": "09:30-10:30",
+                "shop_day": "Tuesday Dec 9",
+                "shop_time": "12:30-13:15",
                 "timing_note": "CRITICAL! Need items + Alarm Clock today!",
                 "budget": "£5-20",
                 "estimated_total": "£15.50",
