--- a/index.html
+++ b/index.html
@@ -814,5 +814,6 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
 
     <script src="script.js"></script>
     <script src="shopping-quick-add.js"></script>
+    <script src="sw-update-listener.js"></script>
 </body>
 </html>
