--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Weekly Schedule Manager V7.0</title>
+    <title>Weekly Schedule Manager V6.2</title>
     <link rel="stylesheet" href="styles.css">
     <script src="import-functions.js" defer></script>
 </head>
@@ -17,7 +17,7 @@
                     <span class="static-name" id="staticName">Ivan</span>
                     <input type="text" class="editable-name" id="editableName" value="Ivan" />
                     's Weekly Schedule
-                    <span class="version-badge">V7.0</span>
+                    <span class="version-badge">V6.2</span>
                 </h1>
             </div>
             <div class="date-info">
@@ -797,8 +797,8 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
 
     <!-- Quick Add Shopping Modal -->
     <div id="quickAddModal" class="modal">
-        <div class="modal-content" style="max-width: 1000px; max-height: 90vh; overflow-y: auto;">
-            <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 20px; border-radius: 12px 12px 0 0; margin: -20px -20px 20px -20px; position: sticky; top: -20px; z-index: 10;">
+        <div class="modal-content" style="max-width: 1000px; max-height: 90vh; display: flex; flex-direction: column;">
+            <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 20px; border-radius: 12px 12px 0 0; margin: -20px -20px 20px -20px; flex-shrink: 0;">
                 <h2 style="margin: 0; color: white; display: flex; align-items: center; gap: 10px;">
                     ⚡ Quick Add Shopping
                     <button onclick="closeQuickAdd()" style="margin-left: auto; background: rgba(255,255,255,0.2); border: none; color: white; padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 14px;">✕ Close</button>
@@ -806,7 +806,7 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
                 <p style="margin: 10px 0 0 0; color: rgba(255,255,255,0.9); font-size: 14px;">Select items from common products - quantities and prices are editable!</p>
             </div>
             
-            <div id="quickAddContent" style="padding: 0 20px 20px 20px;">
+            <div id="quickAddContent" style="padding: 0 20px 0 20px; flex: 1; overflow-y: auto; display: flex; flex-direction: column;">
                 <!-- Content will be dynamically generated -->
             </div>
         </div>
