--- a/index.html
+++ b/index.html
@@ -64,10 +64,30 @@
                         <span style="font-size: 18px;">⚡</span>
                         <span>Quick Add</span>
                     </button>
+                    <button onclick="openHomeInventoryModal()" style="margin-top: 10px; background: linear-gradient(135deg, #f59e0b 0%, #f97316 100%); color: white; border: none; padding: 12px 24px; border-radius: 10px; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(249, 115, 22, 0.3); transition: all 0.3s ease; font-size: 15px; display: flex; align-items: center; gap: 8px;"
+                            onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(249, 115, 22, 0.4)';"
+                            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(249, 115, 22, 0.3)';">
+                        <span style="font-size: 18px;">🏠</span>
+                        <span>Products at Home</span>
+                    </button>
                 </div>
                 
                 <div id="shoppingDisplay" style="background: white; padding: 30px; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08); min-height: 200px;">
                     <!-- Shopping list will be rendered here -->
+                </div>
+                <div id="homeInventoryDisplay" style="margin-top: 16px;">
+                    <!-- Home inventory table -->
+                </div>
+                <div id="autoShoppingControls" style="margin-top: 16px; background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 6px rgba(0,0,0,0.05); display: flex; gap: 12px; flex-wrap: wrap; align-items: center;">
+                    <div style="display: flex; flex-direction: column; gap: 6px; min-width: 200px;">
+                        <label for="shoppingPreferredShop" style="font-weight: 700; color: #374151;">🛒 Preferred shop</label>
+                        <select id="shoppingPreferredShop" style="padding: 10px; border: 2px solid #e5e7eb; border-radius: 8px; font-weight: 600; min-width: 180px;">
+                        </select>
+                    </div>
+                    <button onclick="generateShoppingListFromRecipes()" class="primary-btn" style="padding: 12px 18px;">
+                        🧾 Generate Shopping from Recipes
+                    </button>
+                    <p style="margin: 0; color: #6b7280;">Uses your home products first, then buys missing items.</p>
                 </div>
             </div>
         </div>
@@ -811,6 +831,22 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
             <div id="quickAddContent" style="padding: 0 20px 0 20px; flex: 1; overflow-y: auto; display: flex; flex-direction: column;">
                 <!-- Content will be dynamically generated -->
             </div>
+        </div>
+    </div>
+
+    <!-- Home Inventory Modal -->
+    <div id="homeInventoryModal" class="modal">
+        <div class="modal-content" style="max-width: 900px; max-height: 90vh; overflow-y: auto;">
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
+                <h2 style="margin: 0; display: flex; align-items: center; gap: 8px;">🏠 Products at Home</h2>
+                <div style="display: flex; gap: 8px;">
+                    <button onclick="closeHomeInventoryModal()" class="secondary-btn">✕ Close</button>
+                    <button onclick="saveHomeInventory()" class="primary-btn">💾 Save</button>
+                </div>
+            </div>
+            <p style="margin-top: 0; color: #4b5563;">Select items you currently have at home so we only buy what's missing.</p>
+            <div id="homeInventoryRows" style="display: flex; flex-direction: column; gap: 12px;"></div>
+            <button onclick="addHomeInventoryRow()" class="secondary-btn" style="margin-top: 12px;">➕ Add Item</button>
         </div>
     </div>
 
