Improve home inventory units and trolley interactions

--- a/index.html
+++ b/index.html
@@ -849,9 +849,9 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
             </div>
             <p style="margin-top: 0; color: #4b5563;">Select items you currently have at home so we only buy what's missing. Quantities are what you have left (eggs, grams, litres) — not how many packs you bought.</p>
             <div style="display: flex; gap: 12px; align-items: center; margin-bottom: 12px;">
-                <label style="font-weight: 600; color: #374151;">Shop:</label>
+                <label style="font-weight: 600; color: #374151;">Shop (tap water shown under Home sources):</label>
                 <select id="homeInventoryShop" style="padding: 10px; border: 2px solid #d1d5db; border-radius: 8px; font-weight: 600; min-width: 180px;"></select>
-                <span style="color: #6b7280; font-size: 13px;">Checklist updates when you change shop</span>
+                <span style="color: #6b7280; font-size: 13px;">Checklist updates when you change shop. Tap water stays unlimited.</span>
             </div>
             <div id="homeInventoryChecklist" style="display: flex; flex-direction: column; gap: 12px;"></div>
         </div>
