--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@
                     <!-- Home inventory table -->
                 </div>
                 <div id="autoShoppingControls" style="margin-top: 16px; background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 6px rgba(0,0,0,0.05); display: flex; gap: 12px; flex-wrap: wrap; align-items: center;">
-                    <div style="display: flex; flex-direction: column; gap: 6px; min-width: 200px;">
-                        <label for="shoppingPreferredShop" style="font-weight: 700; color: #374151;">🛒 Preferred shop</label>
-                        <select id="shoppingPreferredShop" style="padding: 10px; border: 2px solid #e5e7eb; border-radius: 8px; font-weight: 600; min-width: 180px;">
-                        </select>
+                    <div style="display: flex; gap: 12px; align-items: flex-end; flex-wrap: wrap;">
+                        <div style="display: flex; flex-direction: column; gap: 6px; min-width: 200px;">
+                            <label for="shoppingPreferredShop" style="font-weight: 700; color: #374151;">🛒 Preferred shop</label>
+                            <select id="shoppingPreferredShop" style="padding: 10px; border: 2px solid #e5e7eb; border-radius: 8px; font-weight: 600; min-width: 180px;">
+                            </select>
+                        </div>
+                        <button onclick="generateShoppingListFromRecipes()" class="primary-btn" style="padding: 12px 18px;">
+                            🧾 Generate Shopping from Recipes
+                        </button>
                     </div>
-                    <button onclick="generateShoppingListFromRecipes()" class="primary-btn" style="padding: 12px 18px;">
-                        🧾 Generate Shopping from Recipes
-                    </button>
-                    <button onclick="clearGeneratedShopping()" class="danger-btn" style="padding: 12px 18px;">
-                        🗑️ Clear Generated Shopping
-                    </button>
                     <p style="margin: 0; color: #6b7280;">Uses your home products first, then buys missing items.</p>
                 </div>
             </div>
@@ -849,9 +848,9 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
             </div>
             <p style="margin-top: 0; color: #4b5563;">Select items you currently have at home so we only buy what's missing. Quantities are what you have left (eggs, grams, litres) — not how many packs you bought.</p>
             <div style="display: flex; gap: 12px; align-items: center; margin-bottom: 12px;">
-                <label style="font-weight: 600; color: #374151;">Shop:</label>
+                <label style="font-weight: 600; color: #374151;">Shop (tap water shown under Home sources):</label>
                 <select id="homeInventoryShop" style="padding: 10px; border: 2px solid #d1d5db; border-radius: 8px; font-weight: 600; min-width: 180px;"></select>
-                <span style="color: #6b7280; font-size: 13px;">Checklist updates when you change shop</span>
+                <span style="color: #6b7280; font-size: 13px;">Checklist updates when you change shop. Tap water stays unlimited.</span>
             </div>
             <div id="homeInventoryChecklist" style="display: flex; flex-direction: column; gap: 12px;"></div>
         </div>
