--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                     <textarea id="blockTasks" placeholder="Wake up&#10;Shower&#10;Get dressed"></textarea>
                 </div>
                 <div class="form-group">
+                    <label for="blockRecipeSelect">Recipe (optional):</label>
+                    <select id="blockRecipeSelect">
+                        <option value="">No recipe linked</option>
+                    </select>
+                </div>
+                <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
+                    <label style="margin: 0;">
+                        <input type="checkbox" id="blockLeftoverToggle" />
+                        Mark as leftover meal
+                    </label>
+                </div>
+                <div class="form-group">
                     <label for="blockNote">Note (optional):</label>
                     <textarea id="blockNote" placeholder="Any additional notes"></textarea>
                 </div>
