--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#667eea" />
     <title>Weekly Schedule Manager V7.3</title>
+     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icon-192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="stylesheet" href="styles.css">
     <script src="import-functions.js" defer></script>
     <script src="recipe-database.js" defer></script>
@@ -13,6 +17,7 @@
     <script src="recipe-prompt-generator.js" defer></script>
     <script src="recipe-import-parser.js" defer></script>
     <script src="ingredient-keywords.js" defer></script>
+    <script src="pwa.js" defer></script>
 </head>
 <body>
     <div class="container">
