--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button class="mode active" id="calendarMode">📅 Calendar</button>
                 <button class="mode" id="editMode">✏️ Edit</button>
                 <button class="mode hidden" id="manageDefaultsBtn">⚙️ Manage Defaults</button>
+                <button class="mode install-btn hidden" id="installAppBtn" type="button">📥 Install App</button>
             </div>
 
             <div class="important-events">
