--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 07:30-08:00 | Breakfast | Porridge (R5)
 ...more blocks...
 
-R4, R5, R6, R10" style="width: 100%; height: 300px; padding: 15px; border: 2px solid #ddd; border-radius: 8px; font-family: monospace; font-size: 12px; resize: vertical;"></textarea>
+R4, CR2, R5, CR7" style="width: 100%; height: 300px; padding: 15px; border: 2px solid #ddd; border-radius: 8px; font-family: monospace; font-size: 12px; resize: vertical;"></textarea>
                 
                 <button onclick="importSchedule()" style="width: 100%; padding: 15px; background: #f5576c; color: white; border: none; border-radius: 8px; font-size: 16px; font-weight: bold; cursor: pointer; margin-top: 15px;">
                     ✨ Import & Apply
