--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <!-- Events will be dynamically added -->
                 </div>
             </div>
-            <button class="manual-update-btn" onclick="manualUpdateCheck()"  title="Check for updates">⟳</button>
+            <button id="manualUpdateBtn" class="manual-update-btn" onclick="manualUpdateCheck()"  title="Check for updates">⟳</button>
         </div>
 
         <div class="day-nav-container">
