--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="theme-color" content="#667eea" />
     <title>Weekly Schedule Manager V7.5</title>
-     <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json?v=2.0">
     <link rel="icon" href="icon-192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="stylesheet" href="styles.css">
