--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="theme-color" content="#667eea" />
-    <title>Weekly Schedule Manager V7.5</title>
+    <title>Weekly Schedule Manager V2.0</title>
     <link rel="manifest" href="manifest.json?v=2.0">
-    <link rel="icon" href="icon-192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="icon" href="icon-192-?v=2.0.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="icon-192-?v=2.0.png">
     <link rel="stylesheet" href="styles.css">
     <script src="import-functions.js" defer></script>
     <script src="recipe-database.js" defer></script>
@@ -28,7 +28,7 @@
                     <span class="static-name" id="staticName">Ivan</span>
                     <input type="text" class="editable-name" id="editableName" value="Ivan" />
                     's Weekly Schedule
-                    <span class="version-badge">V7.5</span>
+                    <span class="version-badge">V2.0</span>
                 </h1>
             </div>
             <div class="date-info">
