--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#667eea" />
     <title>Weekly Schedule Manager V2.0.0</title>
     <link rel="manifest" href="manifest.json?v=2.0.0">
-    <link rel="icon" href="icon-192-?v=2.0.0.png" sizes="192x192">
+    <link rel="icon" href="icon-192-v=2.0.0.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/apple-touch-icon-v2.0.0.png">
     <link rel="stylesheet" href="styles.css">
     <script src="import-functions.js" defer></script>
