--- a/index.html
+++ b/index.html
@@ -1241,12 +1241,15 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
             <h2 style="margin-top: 0; color: #1f2937;">⚙️ Settings & History <span style="font-size: 14px; background: linear-gradient(135deg, #ec4899 0%, #8b5cf6 100%); color: white; padding: 4px 12px; border-radius: 12px; font-weight: 600; margin-left: 8px;">V2.1.0</span></h2>
             
             <!-- Quick Actions -->
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 24px;">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px; margin-bottom: 24px;">
                 <button onclick="openEventModal(); closeSettings();" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%); color: white; padding: 14px 20px; border: none; border-radius: 10px; cursor: pointer; font-size: 15px; font-weight: 700; box-shadow: 0 4px 12px rgba(16,185,129,0.3);">
                     ➕ Add Event
                 </button>
                 <button onclick="openDefaultsModal(); closeSettings();" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); color: white; padding: 14px 20px; border: none; border-radius: 10px; cursor: pointer; font-size: 15px; font-weight: 700; box-shadow: 0 4px 12px rgba(245,158,11,0.3);">
                     ⚙️ Manage Defaults
+                </button>
+                <button onclick="openProductManagement(); closeSettings();" style="background: #fbbf24; color: #1f2937; padding: 14px 20px; border: none; border-radius: 10px; cursor: pointer; font-size: 15px; font-weight: 700; box-shadow: 0 4px 12px rgba(251,191,36,0.35);">
+                    ➕ Manage Products
                 </button>
             </div>
             
