--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,10 @@ The app will parse and beautify automatically!" style="width: 100%; height: 300p
             
             <!-- STOCK TAB -->
             <div id="kitchenStockTab" class="kitchen-tab-content" style="flex: 1; overflow-y: auto; display: none; flex-direction: column; min-height: 600px;">
+                <div style="padding: 16px 20px; background: #ffffff; border-bottom: 1px solid #e5e7eb;">
+                    <label style="display: block; font-weight: 700; color: #1f2937; margin-bottom: 6px;">🔎 Search stock</label>
+                    <input type="text" placeholder="Type to filter items in stock..." oninput="handleKitchenStockSearch(this.value)" style="width: 100%; padding: 12px; border: 2px solid #d1d5db; border-radius: 10px; font-size: 14px;">
+                </div>
                 <!-- Stock Display - Full Height -->
                 <div id="kitchenStockDisplay" style="flex: 1; overflow-y: auto; padding: 20px; background: #f9fafb; min-height: 500px;">
                     <!-- Stock items will be rendered here -->
