--- a/index.html
+++ b/index.html
@@ -627,11 +627,15 @@
                     
                     <!-- Add and Cancel Buttons -->
                     <div style="display: flex; gap: 10px; margin-top: 20px;">
-                        <label style="display: flex; align-items: center; gap: 8px; font-weight: 600; color: #374151;">
-                            <input type="checkbox" id="fitMorningBeforeWork" style="width: 18px; height: 18px;">
-                            <span>Fit morning blocks before work shift (may trim last)</span>
-                        </label>
-                    </div>
+                            <label style="display: flex; align-items: center; gap: 8px; font-weight: 600; color: #374151;">
+                                <input type="checkbox" id="fitMorningBeforeWork" style="width: 18px; height: 18px;">
+                                <span>Fit morning blocks before work shift (may trim last)</span>
+                            </label>
+                            <label style="display: flex; align-items: center; gap: 8px; font-weight: 600; color: #374151;">
+                                <input type="checkbox" id="fitEveningAfterWork" style="width: 18px; height: 18px;">
+                                <span>Pack evening blocks after work (commute, wind-down, sleep)</span>
+                            </label>
+                        </div>
                     
                     <div style="display: flex; gap: 10px; margin-top: 10px;">
                         <button type="button" onclick="document.getElementById('addDayModal').classList.remove('active')" style="flex: 1; padding: 12px; background: #e0e0e0; color: #333; border: none; border-radius: 8px; font-size: 15px; font-weight: 600; cursor: pointer;">
